Featured section Done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football</title>
+    <script src="https://kit.fontawesome.com/a22db8cab7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!-- Header start -->
+    <header></header>
+    <!-- Header End -->
+    <!-- featured image section start -->
+    <section class="featured-section">
+        <div class="featured-heading">
+            <h1>Conmebol Copa America 2021</h1>
+            <button class="watch-live">Watch Live<i class="fas fa-arrow-right"></i></button>
+        </div>
+        <div class="featured-image">
+            <img src="images/banner.png" alt="">
+        </div>
+    </section>
+    <!-- featured image section end -->
     
 </body>
 </html>
