--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
         
     </section>
     <!-- Footer Feature Section End -->
+    <!-- Footer Section Start -->
+    <section class="footer">
+        <div class="footer-image">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="social-icon">
+            <img src="images/Social Icons/Dribbble.png" alt="">
+            <img src="images/Social Icons/Instagram.png" alt="">
+            <img src="images/Social Icons/Twitter.png" alt="">
+            <img src="images/Social Icons/Youtube.png" alt="">
+        </div>
+        <p>Copyright &copy; 2022 Football</p>
+    </section>
+    <!-- Footer Section End -->
     
 </body>
 </html>
