First Extra Section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,43 @@
         
     </section>
     <!-- Footer Feature Section End -->
+    <!-- Extra Section 1 Start-->
+    <section class="news-this-week">
+
+        <dev class="news-week">  
+            <h1>News OF The Week</h1>
+            <hr class="hr">
+        </dev>
+            <h2>Readers Top Chart</h2>
+            
+        <div class="four-news">
+            <div class="box-news shadow">
+                <div>
+                    <a href="#"><img style="width:90%; height:250px;" src="images/news/news1.jpg" alt=""></a>
+                    <a style="color: black; text-decoration: none;" href="#"><h3>Messi to sign new five-year</h3></a>
+                    <p>By Melissa Clark</p>
+                </div>
+                <div>
+                    <a href="#"><img style="width:90%; height:250px;" src="images/news/news2.jpg" alt=""></a>
+                    <a style="color: black; text-decoration: none;" href="#"><h3>'Ready for the journey' - Chelsea</h3></a>
+                    <p>By Vallery Lomas</p>
+                </div>
+                <div>
+                    <a href="#"><img style="width:90%; height:250px;" src="images/news/news3.jpg" alt=""></a>
+                    <a style="color: black; text-decoration: none;" href="#"><h3>We have to try to keep up</h3></a>
+                    <p>By Melissa Clark</p>
+                </div>
+                <div>
+                    <a href="#"><img style="width:90%; height:250px;" src="images/news/news4.jpg" alt=""></a>
+                    <a style="color: black; text-decoration: none;" href="#"><h3>Transfer news and rumours LIVE</h3></a>
+                    <p>By Von Diaz</p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- Extra Section 1 End -->
     <!-- Footer Section Start -->
     <section class="footer">
         <div class="footer-image">
