Extra 2 section responsive

--- a/index.html
+++ b/index.html
@@ -58,33 +58,33 @@
             </article>
             <article class="blog">
                 <img src="images/players/player-7.png" alt="">
-                <h1>Neymar Jr</h1>
-                <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.</p>
+                <h1>Ángel Di María</h1>
+                <p>Di María began his career with Rosario Central, but came into prominence at Benfica after signing for the club in 2007, aged 19. He helped Benfica win a Primeira Liga championship</p>
             </article>
             <article class="blog">
                 <img src="images/players/player-8.png" alt="">
-                <h1>Neymar Jr</h1>
-                <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.</p>
+                <h1>Kylian Mbappé</h1>
+                <p> is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.Mbappé began his senior career with Ligue 1 club Monaco, making his professional debut in 2015</p>
             </article>
             <article class="blog">
                 <img src="images/players/player-9.png" alt="">
-                <h1>Neymar Jr</h1>
-                <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.</p>
+                <h1>Mohamed Salah</h1>
+                <p>Is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team. Considered one of the best players in the world,[6][7] he is known for his finishing, dribbling, and speed.</p>
             </article>
             <article class="blog">
                 <img src="images/players/player-10.png" alt="">
-                <h1>Neymar Jr</h1>
-                <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.</p>
+                <h1>Harry Kane</h1>
+                <p> is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. Regarded as one of the best strikers in the world</p>
             </article>
             <article class="blog">
                 <img src="images/players/player-11.png" alt="">
-                <h1>Neymar Jr</h1>
-                <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.</p>
+                <h1>Kevin De Bruyne</h1>
+                <p>Is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
             </article>
             <article class="blog">
                 <img src="images/players/player-12.png" alt="">
-                <h1>Neymar Jr</h1>
-                <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.</p>
+                <h1>Philippe Coutinho</h1>
+                <p>Is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team</p>
             </article>
         </div>
     </section>
@@ -140,6 +140,25 @@
 
     </section>
     <!-- Extra Section 1 End -->
+    <!-- Extra Section 2 Start -->
+    <section class="more">
+        <h2>More From Our Editors</h2>
+        <hr class="hr">
+        <h2>Top Of The Month</h2>
+        <div  class="more-editors">
+            <div >
+                <a href="#"><img style="" src="images/edit/edit1.jpg" alt=""></a>
+                <a style="color: black; text-decoration: none;" href="#"><h3><p>Argentina beat Brazil in the Copa America final in Rio's Maracana</p></h3></a>
+                <p>By Melissa Clark</p>
+            </div>
+            <div>
+                <a href="#"><img style="" src="images/edit/news2.jpg" alt=""></a>
+                <a style="color: black; text-decoration: none;" href="#"><h3>Joy and sorrow over Euro 2020</h3></a>
+                <p>By Vallery Lomas</p>
+            </div>
+        </div>
+</section>
+    <!-- Extra Section 2 End -->
     <!-- Footer Section Start -->
     <section class="footer">
         <div class="footer-image">
